kubernetes/apps/base/tempo/tempo/referencegrant-jaeger.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-tempo-jaeger-query
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: home
  to:
    - group: ""
      kind: Service
