kubernetes/apps/base/tempo/tempo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tempo-jaeger-query
spec:
  parentRefs:
    - name: ts
      namespace: home
  hostnames:
    - "tempo.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - name: tempo-tempo-query-frontend
          namespace: tempo
          port: 16686
